Adding media print

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="/components/angular-ui-grid/ui-grid.css">
   <link rel="stylesheet" href="/components/angular-ui-select/dist/select.css">
   <link rel="stylesheet" href="/css/styles.css" />
+  <link rel="stylesheet" href="/css/print.css" type="text/css" media="print" />
     <script src="/components/jquery/dist/jquery.js"></script>
     <script src="/components/angular/angular.js"></script>
     <script src="/components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
@@ -134,7 +135,7 @@
             </div>
         </div>
     </div>
-    <div style="padding: 20px 0;background-color: #f8f8f8;" class="row">
+    <div style="padding: 20px 0;background-color: #f8f8f8;" class="row notebook-footer">
         <div class="col-sm-12 col-md-12">
             <p style="text-align:center; margin:0; padding:0;color: #777;font-size:18px;"><i style="padding-right:10px"
                     class="fa fa-book"></i>node-book<a href="" style="text-decoration:underline;color:#777"></a></p>
