--- a/public/index.html
+++ b/public/index.html
@@ -101,6 +101,7 @@
                 <div class="container">
                     <div class="btn-toolbar">
                         <div class="btn-group"><button ng-click="saveDoc()" class="btn"><i class="fa fa-floppy-o"></i></button></div>
+                        <div class="btn-group"><button ng-click="printDoc()" class="btn"><i class="fa fa-print"></i></button></div>
                         <div class="btn-group"><button ng-click="cutRow()" class="btn"><i class="fa fa-cut"></i></button><button
                                 ng-click="copyRow()" class="btn"><i class="fa fa-files-o"></i></button><button ng-click="pasteRow()"
                                 class="btn"><i class="fa fa-paste"></i></button><button ng-click="removeRow()" class="btn"><i
