On reload activate the first row

--- a/public/index.html
+++ b/public/index.html
@@ -138,8 +138,10 @@
     </div>
     <div style="padding: 20px 0;background-color: #f8f8f8;" class="row notebook-footer">
         <div class="col-sm-12 col-md-12">
-            <p style="text-align:center; margin:0; padding:0;color: #777;font-size:18px;"><i style="padding-right:10px"
-                    class="fa fa-book"></i>node-book<a href="" style="text-decoration:underline;color:#777"></a></p>
+            <p style="text-align:center; margin:0; padding:0;color: #777;font-size:18px;">
+              <i style="padding-right:10px" class="fa fa-book"></i>
+              node-book with <3 by <a href="https://twitter.com/cortezcristian" style="text-decoration:underline;color:#777">@cortezcristian</a>
+            </p>
         </div>
     </div>
 </body>
