--- a/public/index.html
+++ b/public/index.html
@@ -100,14 +100,19 @@
             <div class="con-toolbar">
                 <div class="container">
                     <div class="btn-toolbar">
-                        <div class="btn-group"><button ng-click="saveDoc()" class="btn"><i class="fa fa-floppy-o"></i></button></div>
-                        <div class="btn-group"><button ng-click="printDoc()" class="btn"><i class="fa fa-print"></i></button></div>
-                        <div class="btn-group"><button ng-click="cutRow()" class="btn"><i class="fa fa-cut"></i></button><button
-                                ng-click="copyRow()" class="btn"><i class="fa fa-files-o"></i></button><button ng-click="pasteRow()"
-                                class="btn"><i class="fa fa-paste"></i></button><button ng-click="removeRow()" class="btn"><i
-                                    class="fa fa-trash"></i></button></div>
-                        <div class="btn-group"><button ng-click="moveRow('up')" class="btn"><i class="fa fa-arrow-up"></i></button><button
-                                ng-click="moveRow('down')" class="btn"><i class="fa fa-arrow-down"></i></button></div>
+                        <div class="btn-group"><button ng-click="saveDoc()" title="Open Save Preferences" class="btn"><i class="fa fa-floppy-o"></i></button></div>
+                        <div class="btn-group"><button ng-click="downloadDoc()" class="btn" title="Download Notebook Source"><i class="fa fa-download"></i></button></div>
+                        <div class="btn-group"><button ng-click="printDoc()" title="Print Notebook" class="btn"><i class="fa fa-print"></i></button></div>
+                        <div class="btn-group">
+                          <button ng-click="cutRow()" title="Cut Selected Row" class="btn"><i class="fa fa-cut"></i></button>
+                          <button ng-click="copyRow()" class="btn" title="Copy Selected Row"><i class="fa fa-files-o"></i></button>
+                          <button ng-click="pasteRow()" class="btn" title="Paste Selected Row"><i class="fa fa-paste"></i></button>
+                          <button ng-click="removeRow()" class="btn" title="Remove Selected Row"><i class="fa fa-trash"></i></button>
+                        </div>
+                        <div class="btn-group">
+                          <button ng-click="moveRow('up')" title="Move Up Selected Row" class="btn"><i class="fa fa-arrow-up"></i></button>
+                          <button ng-click="moveRow('down')" title="Move Down Selected Row" class="btn"><i class="fa fa-arrow-down"></i></button>
+                        </div>
                         <div class="btn-group">
                             <div style="margin-bottom: 0;" class="form-item form-item-node-type form-type-select form-group"><select
                                     id="row-type" name="row_type" ng-model="notebook.config.selected_row_type" class="form-control form-select">
@@ -116,7 +121,7 @@
                                     <option value="code">Code</option>
                                 </select></div>
                         </div>
-                        <div class="btn-group"><button ng-click="addRow()" class="btn"><i class="fa fa-plus"></i></button></div>
+                        <div class="btn-group"><button ng-click="addRow()" title="Create New Row" class="btn"><i class="fa fa-plus"></i></button></div>
                         <div class="btn-group"><button disabled class="btn">{{selected}}</button></div>
                     </div>
                 </div>
