--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
             </div>
             <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
                 <ul style="margin-right: 20px;" class="nav navbar-nav navbar-right text-uppercase">
-                    <li><a href="#/new">Create New</a></li>
+                    <li><a href="javascript:" ng-click="createNew()">Create New</a></li>
                     <li><a href="#/share">Share</a></li>
                 </ul>
             </div>
