Adding restore and save modal

--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
             <div class="con-toolbar">
                 <div class="container">
                     <div class="btn-toolbar">
-                        <div class="btn-group"><button ng-click="saveDoc()" title="Open Save Preferences" class="btn"><i class="fa fa-floppy-o"></i></button></div>
+                        <div class="btn-group"><button ng-click="openSaveAndRestore()" title="Open Save Preferences" class="btn"><i class="fa fa-floppy-o"></i></button></div>
                         <div class="btn-group"><button ng-click="downloadDoc()" class="btn" title="Download Notebook Source"><i class="fa fa-download"></i></button></div>
                         <div class="btn-group"><button ng-click="printDoc()" title="Print Notebook" class="btn"><i class="fa fa-print"></i></button></div>
                         <div class="btn-group">
