Adding github repo

--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,13 @@
             <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
                 <ul style="margin-right: 20px;" class="nav navbar-nav navbar-right text-uppercase">
                     <li><a href="javascript:" ng-click="loadNotebook()">Create New</a></li>
-                    <li><a href="#/share">Share</a></li>
+                    <li>
+                      <a href="https://github.com/cortezcristian/jsnotebook2" target="_blank" style="padding: 10px 0 0 0;">
+                        <span style="display:inline-block">
+                          <i class="ion-social-github" style="font-size:30px;"></i>
+                        </span>
+                      </a>
+                    </li>
                 </ul>
             </div>
         </div>
