--- a/public/index.html
+++ b/public/index.html
@@ -91,13 +91,14 @@
                 <ul style="margin-right: 20px;" class="nav navbar-nav navbar-right text-uppercase">
                     <li><a href="javascript:" ng-click="createNew()">Clear</a></li>
                     <li><a href="javascript:" ng-click="loadNotebook()">Create New</a></li>
-                    <li>
+                    <li style="margin-right: 20px;">
                       <a href="https://github.com/cortezcristian/jsnotebook2" target="_blank" style="padding: 10px 0 0 0;">
                         <span style="display:inline-block">
                           <i class="ion-social-github" style="font-size:30px;"></i>
                         </span>
                       </a>
                     </li>
+                    <li style=""><div id="hackbit-vote-widget"></div></li>
                 </ul>
             </div>
         </div>
@@ -156,5 +157,6 @@
             </p>
         </div>
     </div>
+     <script src="https://www.nodeknockout.com/entries/97-hansolo/vote.js" type="text/javascript"></script>
 </body>
 </html>
