--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@
                         </span>
                       </a>
                     </li>
-                    <li style=""><div id="hackbit-vote-widget"></div></li>
+                    <li style="margin-right: -35px;"><div id="hackbit-vote-widget"></div></li>
                 </ul>
             </div>
         </div>
