--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
      <script src="components/angular-ui-ace/ui-ace.js"></script>
      <script src="components/ace-editor-bower/ace.js"></script>
   <!-- scritps -->
-  <script src="./scripts/app.js"></script>
+  <script src="./scripts/app.js?ts=nocache1"></script>
   <script src="./scripts/notebook.js"></script>
 </head>
 <body class="container-fluid" ng-controller="NotebookCtrl">
