--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
             </div>
             <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
                 <ul style="margin-right: 20px;" class="nav navbar-nav navbar-right text-uppercase">
-                    <li><a href="javascript:" ng-click="createNew()">Clear</a></li>
-                    <li><a href="javascript:" ng-click="loadNotebook()">Create New</a></li>
+                    <li><a href="javascript:" ng-click="createNew()">Create New</a></li>
+                    <li><a href="javascript:" ng-click="loadNotebook()">Open Help</a></li>
                     <li style="margin-right: 20px;">
                       <a href="https://github.com/cortezcristian/jsnotebook2" target="_blank" style="padding: 10px 0 0 0;">
                         <span style="display:inline-block">
