--- a/public/index.html
+++ b/public/index.html
@@ -69,11 +69,11 @@
                 <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-            <span style="display: inline-block;background-color: rgb(63, 181, 68);color: white;position: absolute;left: 0;padding: 8px 12px 7px 12px;">
-                <i class="ion-social-nodejs" style="font-size:30px"></i>
+            <span style="display: inline-block;background-color:#fbdf00;color:#000;position: absolute;left: 0;padding: 8px 12px 7px 12px;">
+                <i class="ion-social-javascript" style="font-size:30px"></i>
             </span>
               <a href="/" style="color:#000; margin-left: 22px;" class="navbar-brand">
-                <span style="display:inline-block;padding-left:5px;">node-book</span>
+                <span style="display:inline-block;padding-left:5px;">Notebook</span>
               </a>
               <span style="color:#000; margin-left: 22px;" class="navbar-brand title-edition">
                 <span style="display:inline-block; padding-left: 22px;" ng-show='!editingTitle' ng-click="editTitle(true)">
@@ -111,7 +111,10 @@
             <div class="con-toolbar">
                 <div class="container">
                     <div class="btn-toolbar">
-                        <div class="btn-group"><button data-toggle="ng-spotlight" title="Search" class="btn"><i class="fa fa-search"></i></button></div>
+                        <div class="btn-group">
+                          <button data-toggle="ng-spotlight" title="Search" class="btn"><i class="fa fa-search"></i></button>
+                          <button ng-click="openHelp()" title="Help" class="btn"><i class="fa fa-question"></i></button>
+                        </div>
                         <div class="btn-group"><button ng-click="openSaveAndRestore()" title="Open Save Preferences" class="btn"><i class="fa fa-floppy-o"></i></button></div>
                         <div class="btn-group">
                           <button ng-click="downloadDoc()" class="btn" title="Download Notebook Source"><i class="fa fa-download"></i></button>
