--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
             <div id="bs-example-navbar-collapse-1" class="collapse navbar-collapse">
                 <ul style="margin-right: 20px;" class="nav navbar-nav navbar-right text-uppercase">
                     <li><a href="javascript:" ng-click="createNew()">Create New</a></li>
-                    <li><a href="javascript:" ng-click="loadNotebook()">Open Help</a></li>
+                    <li><a href="javascript:" ng-click="loadNotebook()">Quick Start</a></li>
                     <li style="margin-right: 20px;">
                       <a href="https://github.com/cortezcristian/jsnotebook2" target="_blank" style="padding: 10px 0 0 0;">
                         <span style="display:inline-block">
@@ -162,7 +162,7 @@
         <div class="col-sm-12 col-md-12">
             <p style="text-align:center; margin:0; padding:0;color: #777;font-size:18px;">
               <i style="padding-right:10px" class="fa fa-book"></i>
-              node-book with <3 by <a href="https://twitter.com/cortezcristian" style="text-decoration:underline;color:#777">@cortezcristian</a>
+              jsnotebook with <i class="fa fa-heart"></i> by <a href="https://twitter.com/cortezcristian" style="text-decoration:underline;color:#777">@cortezcristian</a>
             </p>
         </div>
     </div>
