--- a/public/index.html
+++ b/public/index.html
@@ -72,8 +72,8 @@
             <span style="display: inline-block;background-color:#fbdf00;color:#000;position: absolute;left: 0;padding: 8px 12px 7px 12px;">
                 <i class="ion-social-javascript" style="font-size:30px"></i>
             </span>
-              <a href="/" style="color:#000; margin-left: 22px;" class="navbar-brand">
-                <span style="display:inline-block;padding-left:5px;">Notebook</span>
+              <a href="/" style="color:#000; margin-left: 22px;border-right: 1px solid #eae9e9;background: #f7f7f7;box-shadow: 10px 0px 100px #ccc;" class="navbar-brand">
+                <span style="display:inline-block;padding-left:5px;font-size: 22px;">Notebook</span>
               </a>
               <span style="color:#000; margin-left: 22px;" class="navbar-brand title-edition">
                 <span style="display:inline-block; padding-left: 22px;" ng-show='!editingTitle' ng-click="editTitle(true)">
