--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="nodebookApp">
 <head>
-  <title>NodeBook</title>
+  <title>Notebook</title>
   <link rel="stylesheet" href="/components/bootstrap/dist/css/bootstrap.css" />
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,700,800" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="/components/metisMenu/dist/metisMenu.css">
@@ -101,7 +101,6 @@
                         </span>
                       </a>
                     </li>
-                    <li style="margin-right: -35px;"><div id="hackbit-vote-widget"></div></li>
                 </ul>
             </div>
         </div>
@@ -140,6 +139,27 @@
                         </div>
                         <div class="btn-group"><button ng-click="addRow()" title="Create New Row" class="btn"><i class="fa fa-plus"></i></button></div>
                         <div class="btn-group"><button disabled class="btn">{{selected}}</button></div>
+                        <div class="btn-group">
+
+                          <span style="color:#000;display: inline-block;padding: 0px;font-size: 14px; height: 35px; padding: 8px 5px 0 5px;" class="navbar-brand video-edition">
+                            <i class="fa fa-youtube-square"></i>
+                            <span style="display:inline-block;" ng-show='!editingVideo' ng-click="editVideo(true)">
+                              {{notebook.video}}
+                            </span>
+                            <i class="fa fa-pencil" ng-click="editVideo(true)" ng-show="!editingVideo"></i>
+                          </span>
+                          <div class="input-group" ng-show='editingVideo' style="padding-right: 30px;">
+                            <input type="text" class="form-control"
+                              placeholder="Paste YouTube URL"
+                              ng-model="notebook.video" ng-trim ng-keydown="changeVideo($event)" />
+                            <div class="input-group-append" style="display: flex;">
+                              <button class="btn btn-outline-secondary" type="button" ng-click="editVideo(false)">
+                                <i class="fa fa-pencil"></i>
+                              </button>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="btn-group"><button ng-click="playVideo()" title="Add Video" class="btn"><i class="fa fa-youtube-play"></i></button></div>
                     </div>
                 </div>
             </div>
@@ -166,6 +186,5 @@
             </p>
         </div>
     </div>
-     <script src="https://www.nodeknockout.com/entries/97-hansolo/vote.js" type="text/javascript"></script>
 </body>
 </html>
