--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="/components/angular-spotlight/examples/css/lightTheme.min.css">
   <link rel="stylesheet" href="/css/styles.css" />
   <link rel="stylesheet" href="/css/print.css" type="text/css" media="print" />
+  <script src="https://www.youtube.com/iframe_api"></script>
     <script src="/components/jquery/dist/jquery.js"></script>
     <script src="/components/angular/angular.js"></script>
     <script src="/components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
@@ -112,7 +113,7 @@
                     <div class="btn-toolbar">
                         <div class="btn-group">
                           <button data-toggle="ng-spotlight" title="Search" class="btn"><i class="fa fa-search"></i></button>
-                          <button ng-click="openHelp()" title="Help" class="btn"><i class="fa fa-question"></i></button>
+                          <button ng-click="openHelp()" title="Shortcuts Help" class="btn"><i class="fa fa-keyboard-o"></i></button>
                         </div>
                         <div class="btn-group"><button ng-click="openSaveAndRestore()" title="Open Save Preferences" class="btn"><i class="fa fa-floppy-o"></i></button></div>
                         <div class="btn-group">
@@ -144,7 +145,7 @@
                           <span style="color:#000;display: inline-block;padding: 0px;font-size: 14px; height: 35px; padding: 8px 5px 0 5px;" class="navbar-brand video-edition">
                             <i class="fa fa-youtube-square"></i>
                             <span style="display:inline-block;" ng-show='!editingVideo' ng-click="editVideo(true)">
-                              {{notebook.video.url === "" ? " Add Video URL" : notebook.video.videoId}}
+                              {{notebook.video.url === "" ? " Add Video URL" : notebook.video.msg}}
                             </span>
                             <i class="fa fa-pencil" ng-click="editVideo(true)" ng-show="!editingVideo"></i>
                           </span>
@@ -185,6 +186,11 @@
               jsnotebook with <i class="fa fa-heart"></i> by <a href="https://twitter.com/cortezcristian" style="text-decoration:underline;color:#777">@cortezcristian</a>
             </p>
         </div>
+    </div>
+    <div id="video-con" ng-show="notebook.video.videoId">
+      <div class="embed-responsive embed-responsive-16by9">
+        <youtube-video video-id="notebook.video.videoId"></youtube-video>
+      </div>
     </div>
 </body>
 </html>
