Adding modal to see video milestones

--- a/public/index.html
+++ b/public/index.html
@@ -160,7 +160,7 @@
                             </div>
                           </div>
                         </div>
-                        <div class="btn-group"><button ng-click="playVideo()" title="Add Video" class="btn"><i class="fa fa-youtube-play"></i></button></div>
+                        <div class="btn-group"><button ng-click="openVideoMilestones()" title="Add Video" class="btn"><i class="fa fa-youtube-play"></i></button></div>
                     </div>
                 </div>
             </div>
