Adding video on create new

--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,10 @@
                 <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
+            <!--
             <span style="display: inline-block;background-color:#fbdf00;color:#000;position: absolute;left: 0;padding: 8px 12px 7px 12px;">
+            -->
+            <span style="display: inline-block;background-color:#000;color:#fff;position: absolute;left: 0;padding: 8px 12px 7px 12px;">
                 <i class="ion-social-javascript" style="font-size:30px"></i>
             </span>
               <a href="/" style="color:#000; margin-left: 22px;border-right: 1px solid #eae9e9;background: #f7f7f7;box-shadow: 10px 0px 100px #ccc;" class="navbar-brand">
@@ -160,7 +163,7 @@
                             </div>
                           </div>
                         </div>
-                        <div class="btn-group"><button ng-click="openVideoMilestones()" title="Add Video" class="btn"><i class="fa fa-youtube-play"></i></button></div>
+                        <div class="btn-group"><button ng-click="openVideoMilestones()" title="Video Config" class="btn"><i class="fa fa-youtube-play"></i></button></div>
                     </div>
                 </div>
             </div>
