--- a/public/index.html
+++ b/public/index.html
@@ -164,6 +164,7 @@
                           </div>
                         </div>
                         <div class="btn-group"><button ng-click="openVideoMilestones()" title="Video Config" class="btn"><i class="fa fa-youtube-play"></i></button></div>
+                        <div class="btn-group"><button disabled class="btn">{{videoCurrentTime}}s</button></div>
                     </div>
                 </div>
             </div>
