--- a/public/index.html
+++ b/public/index.html
@@ -2,64 +2,64 @@
 <html lang="en" ng-app="nodebookApp">
 <head>
   <title>Notebook</title>
-  <link rel="stylesheet" href="/components/bootstrap/dist/css/bootstrap.css" />
+  <link rel="stylesheet" href="./components/bootstrap/dist/css/bootstrap.css" />
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,700,800" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="/components/metisMenu/dist/metisMenu.css">
-  <link rel="stylesheet" href="/components/angular-toggle-switch/angular-toggle-switch.css">
-  <link rel="stylesheet" href="/components/perfect-scrollbar/css/perfect-scrollbar.css">
-  <link rel="stylesheet" href="/components/components-font-awesome/css/font-awesome.css">
-  <link rel="stylesheet" href="/components/prism/themes/prism.css">
-  <link rel="stylesheet" href="/components/animate.css/animate.css">
-  <link rel="stylesheet" href="/components/angular-hotkeys/build/hotkeys.css">
-  <link rel="stylesheet" href="/components/Ionicons/css/ionicons.css">
-  <link rel="stylesheet" href="/components/github-markdown-css/github-markdown.css">
-  <link rel="stylesheet" href="/components/angular-ui-grid/ui-grid.css">
-  <link rel="stylesheet" href="/components/angular-ui-select/dist/select.css">
-  <link rel="stylesheet" href="/components/angular-spotlight/examples/css/lightTheme.min.css">
-  <link rel="stylesheet" href="/css/styles.css" />
-  <link rel="stylesheet" href="/css/print.css" type="text/css" media="print" />
+  <link rel="stylesheet" href="./components/metisMenu/dist/metisMenu.css">
+  <link rel="stylesheet" href="./components/angular-toggle-switch/angular-toggle-switch.css">
+  <link rel="stylesheet" href="./components/perfect-scrollbar/css/perfect-scrollbar.css">
+  <link rel="stylesheet" href="./components/components-font-awesome/css/font-awesome.css">
+  <link rel="stylesheet" href="./components/prism/themes/prism.css">
+  <link rel="stylesheet" href="./components/animate.css/animate.css">
+  <link rel="stylesheet" href="./components/angular-hotkeys/build/hotkeys.css">
+  <link rel="stylesheet" href="./components/Ionicons/css/ionicons.css">
+  <link rel="stylesheet" href="./components/github-markdown-css/github-markdown.css">
+  <link rel="stylesheet" href="./components/angular-ui-grid/ui-grid.css">
+  <link rel="stylesheet" href="./components/angular-ui-select/dist/select.css">
+  <link rel="stylesheet" href="./components/angular-spotlight/examples/css/lightTheme.min.css">
+  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="./css/print.css" type="text/css" media="print" />
   <script src="https://www.youtube.com/iframe_api"></script>
-    <script src="/components/jquery/dist/jquery.js"></script>
-    <script src="/components/angular/angular.js"></script>
-    <script src="/components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <script src="/components/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="/components/metisMenu/dist/metisMenu.js"></script>
-    <script src="/components/lodash/dist/lodash.compat.js"></script>
-    <script src="/components/restangular/dist/restangular.js"></script>
-    <script src="/components/angular-resource/angular-resource.js"></script>
-    <script src="/components/angular-cookies/angular-cookies.js"></script>
-    <script src="/components/angular-sanitize/angular-sanitize.js"></script>
-    <script src="/components/angular-animate/angular-animate.js"></script>
-    <script src="/components/angular-touch/angular-touch.js"></script>
-    <script src="/components/angular-route/angular-route.js"></script>
-    <script src="/components/angular-toggle-switch/angular-toggle-switch.js"></script>
-    <script src="/components/waypoints/lib/noframework.waypoints.js"></script>
-    <script src="/components/perfect-scrollbar/js/perfect-scrollbar.jquery.js"></script>
-    <script src="/components/perfect-scrollbar/js/perfect-scrollbar.js"></script>
-    <script src="/components/jquery.scrollTo/jquery.scrollTo.js"></script>
-    <script src="/components/prism/prism.js"></script>
-    <script src="/components/gsap/src/uncompressed/TweenMax.js"></script>
-    <script src="/components/ngFx/dist/ngFx.js"></script>
-    <script src="/components/angular-youtube-mb/src/angular-youtube-embed.js"></script>
-    <script src="/components/angular-hotkeys/build/hotkeys.js"></script>
-    <script src="/components/wow/dist/wow.js"></script>
-    <script src="/components/angular-elastic/elastic.js"></script>
-    <script src="/components/showdown/src/showdown.js"></script>
-    <script src="/components/angular-markdown-directive/markdown.js"></script>
-    <script src="/components/ngSmoothScroll/lib/angular-smooth-scroll.js"></script>
-    <script src="/components/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <script src="/components/angular-ui-grid/ui-grid.js"></script>
-    <script src="/components/angular-ui-select/dist/select.js"></script>
-    <script src="/components/showdown/src/extensions/table.js"></script>
+    <script src="./components/jquery/dist/jquery.js"></script>
+    <script src="./components/angular/angular.js"></script>
+    <script src="./components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="./components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="./components/metisMenu/dist/metisMenu.js"></script>
+    <script src="./components/lodash/dist/lodash.compat.js"></script>
+    <script src="./components/restangular/dist/restangular.js"></script>
+    <script src="./components/angular-resource/angular-resource.js"></script>
+    <script src="./components/angular-cookies/angular-cookies.js"></script>
+    <script src="./components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="./components/angular-animate/angular-animate.js"></script>
+    <script src="./components/angular-touch/angular-touch.js"></script>
+    <script src="./components/angular-route/angular-route.js"></script>
+    <script src="./components/angular-toggle-switch/angular-toggle-switch.js"></script>
+    <script src="./components/waypoints/lib/noframework.waypoints.js"></script>
+    <script src="./components/perfect-scrollbar/js/perfect-scrollbar.jquery.js"></script>
+    <script src="./components/perfect-scrollbar/js/perfect-scrollbar.js"></script>
+    <script src="./components/jquery.scrollTo/jquery.scrollTo.js"></script>
+    <script src="./components/prism/prism.js"></script>
+    <script src="./components/gsap/src/uncompressed/TweenMax.js"></script>
+    <script src="./components/ngFx/dist/ngFx.js"></script>
+    <script src="./components/angular-youtube-mb/src/angular-youtube-embed.js"></script>
+    <script src="./components/angular-hotkeys/build/hotkeys.js"></script>
+    <script src="./components/wow/dist/wow.js"></script>
+    <script src="./components/angular-elastic/elastic.js"></script>
+    <script src="./components/showdown/src/showdown.js"></script>
+    <script src="./components/angular-markdown-directive/markdown.js"></script>
+    <script src="./components/ngSmoothScroll/lib/angular-smooth-scroll.js"></script>
+    <script src="./components/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script src="./components/angular-ui-grid/ui-grid.js"></script>
+    <script src="./components/angular-ui-select/dist/select.js"></script>
+    <script src="./components/showdown/src/extensions/table.js"></script>
     <!--
     <script src="//scripts/jquery.singlePageNav.min.js"></script>
      -->
-     <script src="components/angular-ui-ace/ui-ace.js"></script>
-     <script src="components/ace-editor-bower/ace.js"></script>
-     <script src="/components/angular-spotlight/examples/js/angularSpotlight.js"></script>
+     <script src="./components/angular-ui-ace/ui-ace.js"></script>
+     <script src="./components/ace-editor-bower/ace.js"></script>
+     <script src="./components/angular-spotlight/examples/js/angularSpotlight.js"></script>
   <!-- scritps -->
-  <script src="/scripts/app.js"></script>
-  <script src="/scripts/notebook.js"></script>
+  <script src="./scripts/app.js"></script>
+  <script src="./scripts/notebook.js"></script>
 </head>
 <body class="container-fluid">
   <div ng-view></div>
