--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,7 @@
      <script src="./components/angular-ui-ace/ui-ace.js"></script>
      <script src="./components/ace-editor-bower/ace.js"></script>
      <script src="./components/angular-spotlight/examples/js/angularSpotlight.js"></script>
+    <script src="./components/plantuml-encoder/dist/plantuml-encoder.min.js"></script>
   <!-- scritps -->
   <script src="./scripts/app.js"></script>
   <script src="./scripts/notebook.js"></script>
